# knowledgeops

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  ENTRYPOINTS.md  FAQ.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml  pyrightconfig.json  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
data/sample/: company_handbook.md  product_docs.md
docs/: API.md  ARCHITECTURE.md  DATA_FLOW.md  DEPLOYMENT.md  DEPLOYMENT_TARGETS.md  EXECUTION_PLAN.md  MIGRATIONS.md  QUICKSTART.md  SECURITY.md  SERVICES.md  design-decisions.md  failure-modes.md  roadmap.md
docs/adr/: 0001-service-boundaries.md  0002-deterministic-local-ai-fallbacks.md
docs/architecture/: c4.md
examples/: run_demo.py
infra/nginx/: nginx.conf
infra/postgres/: init.sql
infra/terraform/: main.tf
k8s/base/: api-gateway.yaml  configmap.yaml  namespace.yaml  postgres.yaml  redis.yaml
nginx/: nginx.conf
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: config.py  main.py
services/api-gateway/app/routes/: health.py  proxy.py
services/api-gateway/tests/: conftest.py  test_main.py  test_proxy.py
services/auth-service/: Dockerfile  alembic.ini  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 001_initial.py
services/auth-service/app/: auth.py  config.py  database.py  main.py  models.py
services/auth-service/app/routes/: auth.py
services/auth-service/tests/: conftest.py  test_auth_utils.py  test_main.py  test_routes.py
services/eval-service/: Dockerfile  pyproject.toml
services/ingestion-service/: Dockerfile  arq_worker.py  pyproject.toml
services/llm-gateway/: Dockerfile  (+2 more)
services/retrieval-service/: Dockerfile  pyproject.toml
services/retrieval-service/app/: config.py  main.py
services/retrieval-service/app/citation/: __init__.py  assembler.py
services/retrieval-service/app/db/: session.py
services/retrieval-service/app/generation/: __init__.py  answer.py  refusal.py
services/retrieval-service/app/search/: __init__.py  hybrid.py  index.py  reranking.py
services/retrieval-service/tests/: conftest.py  test_api.py  test_generation.py  test_main.py  test_search.py
services/trace-service/: Dockerfile  pyproject.toml
services/trace-service/app/: config.py  main.py
services/trace-service/app/collector/: __init__.py  trace_collector.py
services/trace-service/app/db/: session.py
services/trace-service/app/replay/: __init__.py  replay_engine.py
services/trace-service/app/storage/: __init__.py  trace_store.py
services/trace-service/tests/: conftest.py  test_main.py  test_readiness.py  test_trace_flow.py
shared/python/: pyproject.toml
shared/python/shared/: __init__.py  config.py  db.py  health.py  logging.py  models.py  readiness.py
terraform/: main.tf
tests/: conftest.py  test_integration.py  test_load_smoke.py  test_local_services.py
(+95 files in other folders)
