[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgeops-auth-service"
version = "0.1.0"
description = "Authentication and RBAC service for KnowledgeOps"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pyjwt>=2.8.0",
    "passlib>=1.7.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "knowledgeops-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "alembic>=1.13.0",
]
